--- a/fcc-gpt/bigram.ipynb
+++ b/fcc-gpt/bigram.ipynb
@@ -581,9 +581,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cuda-gpt",
+   "display_name": "cuda311",
    "language": "python",
-   "name": "cuda311"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
